--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ feedback: true
 # If commented, will use material hat theme
 # logo: "assets/img/logo/SRCC-square-red.png"
 logo_pixels: 34
-color: "#30638e"
+color: "#AA00FF"
 # color: "#8c1515" # primary color for header, buttons
 
 # Build settings
