--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -1,28 +1,46 @@
-- title: Documentation
+#- title: Documentation
+#  url: docs
+#  links:
+#    - title: "Getting Started"
+#      url: "docs/getting-started"
+#      children:
+#        - title: Features
+#          url: "docs/getting-started#getting-started"
+#        - title: Development
+#          url: "docs/getting-started#development"
+#        - title: Customization
+#          url: "docs/getting-started#customization"
+#    - title: "About"
+#      url: "about"
+#      children:
+#        - title: Support
+#          url: "about#Support"
+#    - title: "News"
+#      url: "news"
+#    - title: "Singlestore"
+#      url: "docs/S2_AWS/s2"
+#- title: "Extras"
+#  url: "docs/extras"
+#  links:
+#    - title: Quizzes
+#      url: "docs/extras/example-quiz"
+#    - title: Tags Page
+#      url: "tags"
+- title: Technical Guides
   url: docs
   links:
-    - title: "Getting Started"
+    - title: "Deploying"
       url: "docs/getting-started"
       children:
-        - title: Features
-          url: "docs/getting-started#getting-started"
-        - title: Development
-          url: "docs/getting-started#development"
-        - title: Customization
-          url: "docs/getting-started#customization"
-    - title: "About"
-      url: "about"
-      children:
-        - title: Support
-          url: "about#Support"
-    - title: "News"
+        - title: AWS
+          url: "docs/Deploying/AWS/deploying"
+        - title: GCP
+          url: "docs/Deploying/GCP/deploying"
+        - title: Azure
+          url: "docs/Deploying/Azure/deploying"
+    - title: "Monitoring"
+      url: "docs/Monitoring/monitoring"
+    - title: "Scaling"
       url: "news"
-    - title: "Singlestore"
-      url: "docs/S2_AWS/s2"
-- title: "Extras"
-  url: "docs/extras"
-  links:
-    - title: Quizzes
-      url: "docs/extras/example-quiz"
-    - title: Tags Page
-      url: "tags"
+    - title: "Disaster Recovery"
+      url: "news"
