--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -30,7 +30,7 @@
   url: docs
   links:
     - title: "Deploying"
-      url: "docs/getting-started"
+      url: "docs/Deploying/deploying_home"
       children:
         - title: AWS
           url: "docs/Deploying/AWS/deploying"
@@ -41,6 +41,6 @@
     - title: "Monitoring"
       url: "docs/Monitoring/monitoring"
     - title: "Scaling"
-      url: "news"
+      url: "docs/Scaling/scaling"
     - title: "Disaster Recovery"
-      url: "news"
+      url: "docs/Disaster Recovery/disaster_recovery"
