--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -30,17 +30,17 @@
   url: docs
   links:
     - title: "Deploying"
-      url: "docs/Deploying_dir/deploying_home"
+      url: "docs/Deploying/deploying_home"
       children:
         - title: AWS
-          url: "docs/Deploying_dir/AWS_dir/deploying"
+          url: "docs/Deploying/AWS/deploying"
         - title: GCP
-          url: "docs/Deploying_dir/GCP_dir/deploying"
+          url: "docs/Deploying/GCP/deploying"
         - title: Azure
-          url: "docs/Deploying_dir/Azure_dir/deploying"
+          url: "docs/Deploying/Azure/deploying"
     - title: "Monitoring"
-      url: "docs/Monitoring_dir/monitoring"
+      url: "docs/Monitoring/monitoring"
     - title: "Scaling"
-      url: "docs/Scaling_dir/scaling"
-    - title: "Disaster Recovery"
-      url: "docs/Disaster Recovery_dir/disaster_recovery"
+      url: "docs/Scaling/scaling"
+    - title: "DisasterRecovery"
+      url: "docs/DisasterRecovery/disaster_recovery"
