--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 title: Cloud-ops
 email: your-email@domain.com
 author: Dinosaur Avocado
-description: > # this means to ignore newlines until "baseurl:"
+#description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
