--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ title: Cloud-ops
 email: your-email@domain.com
 author: Dinosaur Avocado
 #description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+#  Write an awesome description for your new site here. You can edit this
+#  line in _config.yml. It will appear in your document head meta (for
+#  Google search results) and in your feed.xml site description.
 
 # Add your baseurl here (your repository) but DO NOT CHANGE THE LINE NUMBER without editing .circleci/circle_urls.sh
 baseurl: "/cloud-ops" # the subpath of your site, e.g. /blog
