--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -44,3 +44,9 @@
       url: "docs/Scaling/scaling"
     - title: "DisasterRecovery"
       url: "docs/DisasterRecovery/disaster_recovery"
+- title: Docker Artifacts
+  links:
+    - title: "memsql/operator"
+    - title: "memsql/node"
+    - title: "memsql/tools"
+    - title: "memsql/cluster-in-a-box"
